# adk-sidecar-setup

./: .env.example  .gitignore  README.md  docker-compose.yml
.claude/: settings.local.json
adk_service/: Dockerfile  pyproject.toml
adk_service/lease_reviewer/: __init__.py  agent.py  schemas.py  settings.py  tools.py
adk_service/lease_reviewer/sub_agents/checklist_agent/: agent.py
api/: Dockerfile  main.py  pyproject.toml
docling/: Dockerfile
docs/: _quarto.yml  index.html  index.qmd
docs/scripts/: capture_screenshots.R
frontend/: Dockerfile  app.py  pyproject.toml
frontend/assets/: custom.css
tests/: e2e_test.py  generate_test_pdf.py  test_services.sh
